fix: some reponsive layout issue

--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -33,7 +33,7 @@
 
 .list {
   position: absolute;
-  inset: 120% max(-20%, -1em) auto 0;
+  inset: 120% -20% auto 0;
   background-color: var(--theme-color-tertiary);
   border-radius: 0.75em;
   padding: 0.5em 0;
@@ -62,6 +62,6 @@
   }
 
   .list {
-    inset: 120% 0 auto max(-20%, -1em);
+    inset: 120% 0 auto -20%;
   }
 }
