--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -82,6 +82,6 @@
   }
 
   .button {
-    font-size: 2.25rem;
+    font-size: 2rem;
   }
 }
